# emojiq

./: .mise.toml  CHANGES.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: help.css  help.html  help.js  index.html  main.css  main.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  constants.rs  emoji_manager.rs  errors.rs  hotkey.rs  lib.rs  main.rs  panel.rs  permissions.rs  positioning.rs  settings.rs  tray.rs
src-tauri/src-python/: main.py  main_test.py
src-tauri/tests/: emoji_manager_tests.rs
